@@ -1,13 +1,18 @@
 package com.poker.reader.domain.service;
 
+import com.poker.reader.domain.model.Hand;
 import com.poker.reader.domain.model.PokerLine;
 import com.poker.reader.domain.repository.*;
 import com.poker.reader.domain.repository.projection.HandDtoProjection;
 import com.poker.reader.domain.repository.projection.PlayerDetailsDtoProjection;
 import com.poker.reader.domain.repository.projection.PlayerDtoProjection;
 import com.poker.reader.domain.repository.projection.TournamentDtoProjection;
-import com.poker.reader.domain.util.CardUtil;
-import com.poker.reader.view.rs.dto.*;
+import com.poker.reader.view.rs.dto.PageDto;
+import com.poker.reader.view.rs.dto.PlayerMonitoredDto;
+import com.poker.reader.view.rs.dto.RecommendationDto;
+import com.poker.reader.view.rs.dto.StatsDto;
+import com.poker.reader.view.rs.model.ModelTournamentMonitored;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.data.domain.Page;
@@ -16,10 +21,8 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import static com.google.common.base.Preconditions.checkNotNull;
@@ -29,50 +32,24 @@ import static com.google.common.base.Preconditions.checkNotNull;
 @Component
 public class FileHtmlProcessorService {
 
+    private static final String HERO = "jcarlos.vale";
+
     private final TournamentRepository tournamentRepository;
     private final PlayerRepository playerRepository;
     private final HandRepository handRepository;
     private final PokerLineRepository pokerLineRepository;
-    private final String HERO = "jcarlos.vale";
     private final HandConsolidationRepository handConsolidationRepository;
+    private final StatsService statsService;
 
 
-    public Page<PlayerDto> findPaginatedPlayers(Pageable pageable, boolean isMonitoring) {
+    public Page<PlayerDtoProjection> findPaginatedPlayers(Pageable pageable) {
 
         int pageSize = pageable.getPageSize();
         int currentPage = pageable.getPageNumber();
 
-        List<PlayerDto> playerDtoList =
-                handConsolidationRepository
-                        .getAllPlayerDto(pageable)
-                        .stream()
-                        .map(playerDtoProjection -> toPlayerDto(playerDtoProjection, isMonitoring))
-                        .collect(Collectors.toList());
+        List<PlayerDtoProjection> playerDtoList = handConsolidationRepository.getAllPlayerDto(pageable).toList();
 
         return new PageImpl<>(playerDtoList, PageRequest.of(currentPage, pageSize), playerRepository.count());
-    }
-
-    private PlayerDto toPlayerDto(PlayerDtoProjection playerDtoProjection, boolean isMonitoring) {
-        String css = classNameFromChenValue(playerDtoProjection.getAvgChen());
-
-        if (isMonitoring) {
-            if (playerDtoProjection.getNickname().equals(HERO)) {
-                css = "d-none";
-            }
-        }
-
-        return
-                PlayerDto.builder()
-                        .nickname(playerDtoProjection.getNickname())
-                        .totalHands(playerDtoProjection.getTotalHands())
-                        .showdowns(playerDtoProjection.getShowdowns())
-                        .showdownStat(playerDtoProjection.getShowdownStat())
-                        .avgChen(playerDtoProjection.getAvgChen())
-                        .createdAt(playerDtoProjection.getCreatedAt())
-                        .cards(CardUtil.sort(playerDtoProjection.getCards()))
-                        .rawCards(playerDtoProjection.getRawCards())
-                        .css(css)
-                        .build();
     }
 
     public Page<TournamentDtoProjection> findPaginatedTournaments(Pageable pageable) {
@@ -84,14 +61,6 @@ public class FileHtmlProcessorService {
                         .getAllTournamentsDto(pageable);
 
         return new PageImpl<>(tournamentsDtoList.getContent(), PageRequest.of(currentPage, pageSize), tournamentRepository.count());
-    }
-
-    private static String classNameFromChenValue(Integer avgChenValue) {
-        if (avgChenValue == null) return "";
-        if (avgChenValue >= 10) return "bg-primary";
-        if (avgChenValue >= 8) return "bg-success";
-        if (avgChenValue >= 5) return "table-warning";
-        return "bg-danger";
     }
 
     public Integer calculateAvgStackFromLastHandOfTournament(Long tournamentId) {
@@ -111,23 +80,6 @@ public class FileHtmlProcessorService {
         return "";
     }
 
-    public HandDto extractHandDto(List<PlayerDetailsDto> playerDetailsDtoList) {
-        if (playerDetailsDtoList.isEmpty()) return HandDto.builder().build();
-        PlayerDetailsDtoProjection playerDetailsDtoProjection = playerDetailsDtoList.get(0).getPlayerDetailsDtoProjection();
-        return HandDto
-                .builder()
-                .tournamentId(playerDetailsDtoProjection.getTournamentId())
-                .handId(playerDetailsDtoProjection.getHandId())
-                .level(playerDetailsDtoProjection.getLevel())
-                .blinds(playerDetailsDtoProjection.getBlinds())
-                .players(playerDetailsDtoList.size())
-                .pot(playerDetailsDtoProjection.getPot())
-                .board(playerDetailsDtoProjection.getBoard())
-                .boardShowdown(playerDetailsDtoProjection.getBoardShowdown())
-                .playedAt(playerDetailsDtoProjection.getPlayedAt())
-                .build();
-    }
-
     public String getRawDataFrom(Long handId) {
         return
             pokerLineRepository
@@ -136,7 +88,7 @@ public class FileHtmlProcessorService {
                     .map(PokerLine::getLine)
                     .collect(Collectors.joining("<br>"));
     }
-
+/*
     public List<PlayerDetailsDto> getPlayersDetailsFromHand(Long handId) {
 
         List<PlayerDetailsDtoProjection> playerDetailsDtoProjectionList = handConsolidationRepository.getPlayersDetailsFromHand(handId);
@@ -147,7 +99,7 @@ public class FileHtmlProcessorService {
                         .map(playerDetailsDtoProjection -> toPlayerDetailsDto(playerDetailsDtoProjection))
                         .collect(Collectors.toList());
     }
-
+*/
     private Optional<Integer> getPositionByPlace(List<PlayerDetailsDtoProjection> playerDetailsDtoProjectionList, String place) {
         return
                 playerDetailsDtoProjectionList
@@ -156,7 +108,7 @@ public class FileHtmlProcessorService {
                         .map(PlayerDetailsDtoProjection::getPosition)
                         .findFirst();
     }
-
+/*
     private PlayerDetailsDto toPlayerDetailsDto(PlayerDetailsDtoProjection playerDetailsDtoProjection) {
         return
                 PlayerDetailsDto
@@ -167,7 +119,8 @@ public class FileHtmlProcessorService {
                         .cssNickname(classNameFromWinnerOrLoser(playerDetailsDtoProjection))
                         .build();
     }
-
+*/
+    /*
     private String classNameFromWinnerOrLoser(PlayerDetailsDtoProjection playerDetailsDtoProjection) {
         if (playerDetailsDtoProjection.getIsWinner()) {
             return "table-success";
@@ -177,13 +130,9 @@ public class FileHtmlProcessorService {
         }
         return "table-warning";
     }
-
-    public PlayerDto findPlayer(String nickname, boolean isMonitoring) {
-        Optional<PlayerDtoProjection> player = handConsolidationRepository.getPlayerDtoByNickname(nickname);
-        if (player.isPresent()) {
-            return toPlayerDto(player.get(), isMonitoring);
-        }
-        return PlayerDto.builder().build();
+*/
+    public PlayerDtoProjection findPlayer(String nickname) {
+        return handConsolidationRepository.getPlayerDtoByNickname(nickname);
     }
 
     public PageDto createHandPaginationFromTournament(long handId, long tournamentId) {
@@ -211,7 +160,7 @@ public class FileHtmlProcessorService {
         }
         return pageDto;
     }
-
+/*
     public List<PlayerMonitoredDto> getPlayersToMonitorFromLastHandOfTournament(Long tournamentId,
             Map<String, PlayerDetailsDto> playerDetailsDtoMap) {
         return
@@ -224,55 +173,94 @@ public class FileHtmlProcessorService {
                         })
                         .collect(Collectors.toList());
     }
-
-    public RecommendationDto getRecommendation(List<PlayerMonitoredDto> playerMonitoredDtoList) {
-
-        Optional<PlayerMonitoredDto> playerMonitoredDtoOptional =
-                playerMonitoredDtoList.stream()
-                        .filter(player -> player.getPlayerDto().getNickname().equals(HERO))
-                        .findFirst();
-
-        if (playerMonitoredDtoOptional.isPresent()) {
-
-            PlayerMonitoredDto playerMonitoredDto = playerMonitoredDtoOptional.get();
-            var tournamentId = playerMonitoredDto.getStackDtoProjection().getTournamentId();
-            Integer avgStack = calculateAvgStack(playerMonitoredDtoList);//calculateAvgStackFromLastHandOfTournament(tournamentId);
-            var stackFromHero = playerMonitoredDto.getStackDtoProjection().getStackOfPlayer();
-            var blinds = playerMonitoredDto.getStackDtoProjection().getBlinds();
-            return
-                    RecommendationDto
-                            .builder()
-                            .nickname(playerMonitoredDto.getPlayerDto().getNickname())
-                            .tournamentId(playerMonitoredDto.getStackDtoProjection().getTournamentId())
-                            .handId(playerMonitoredDto.getStackDtoProjection().getHandId())
-                            .minBlinds(18 * playerMonitoredDto.getStackDtoProjection().getBigBlind())
-                            .avgStack(avgStack)
-                            .stack(stackFromHero)
-                            .blinds(blinds)
-                            .recommendation(analyseStack(stackFromHero, avgStack, blinds))
-                            .build();
-        }
-        return RecommendationDto.builder().build();
+*/
+    private Integer calculateAvgStack(List<StatsDto> statsDtoList) {
+        return (int) statsDtoList.stream().mapToInt(StatsDto::getStackOfPlayer).average().orElseThrow();
     }
 
-    private Integer calculateAvgStack(List<PlayerMonitoredDto> playerMonitoredDtoList) {
-        return (int) playerMonitoredDtoList.stream().mapToInt(value -> value.getStackDtoProjection().getStackOfPlayer()).average().getAsDouble();
+    public ModelTournamentMonitored getTournamentMonitoredModel(Long tournamentId) {
+
+        Hand hand = handRepository.findMostRecent(tournamentId);
+        long handId = hand.getHandId();
+
+        log.info("Retrieving tournament {} hand {}", tournamentId, handId);
+
+        List<PlayerDtoProjection> playerDtoProjectionList = handConsolidationRepository.getPlayersDtoFromHand(handId);
+        List<StatsDto> statsList = statsService.loadStats(tournamentId, handId);
+
+        int avgStack = calculateAvgStack(statsList);
+        List<PlayerMonitoredDto> playerMonitoredDtoList = mergeIntoPlayerMonitored(playerDtoProjectionList, statsList);
+        playerMonitoredDtoList.forEach(playerMonitoredDto -> Analyse.analysePlayer(playerMonitoredDto, avgStack));
+
+        PlayerMonitoredDto hero = remove(playerMonitoredDtoList, HERO);
+        RecommendationDto recommendationDto = Analyse.analyseStack(hero.getStackOfPlayer(), avgStack,hero.getBlindsCount());
+
+        return ModelTournamentMonitored.builder()
+                .tournamentId(tournamentId)
+                .handId(handId)
+                .stackOfHero(hero.getStackOfPlayer())
+                .minBlindsRecommendation(Analyse.MIN_BLINDS * hand.getBigBlind())
+                .recommendation(recommendationDto.getRecommendation())
+                .cssRecommendation(recommendationDto.getCss())
+                .avgStack(avgStack)
+                .blindsCount(hero.getBlindsCount())
+                .playerMonitoredDtoList(playerMonitoredDtoList)
+                .build();
     }
 
-    private String analyseStack(long stackFromHero, Integer avgStack, int blinds) {
-        if(blinds <= 10) {
-            return "ALL IN, LESS THAN 10 BLINDS";
+    private PlayerMonitoredDto remove(List<PlayerMonitoredDto> playerMonitoredDtoList, String hero) {
+        int index = -1;
+        for (int i = 0; i < playerMonitoredDtoList.size(); i++) {
+            if (playerMonitoredDtoList.get(i).getNickname().equals(hero)) {
+                index = i;
+                break;
+            }
         }
-        if ((stackFromHero < avgStack) && (blinds <= 18)){
-            return "ALL IN, LESS THAN AVERAGE BLINDS < 18";
-        }
-        if (stackFromHero > avgStack) {
-            return "ABOVE AVG STACK";
-        }
-        return "PLAY!";
+        PlayerMonitoredDto playerMonitoredDtoHero = playerMonitoredDtoList.get(index);
+        playerMonitoredDtoList.remove(index);
+        return playerMonitoredDtoHero;
     }
 
-    public long getLastHandFromTournament(Long tournamentId) {
-        return pokerLineRepository.getLastHandFromTournament(tournamentId);
+    private List<PlayerMonitoredDto> mergeIntoPlayerMonitored(List<PlayerDtoProjection> playerDtoProjectionList, List<StatsDto> statsList) {
+
+        statsList.sort(Comparator.comparing(StatsDto::getPosition));
+        Map<String, PlayerDtoProjection> playerDtoProjectionMap = toMap(playerDtoProjectionList);
+
+        return
+                statsList.stream()
+                        .map(statsDto -> {
+                            PlayerDtoProjection playerDtoProjection = playerDtoProjectionMap.get(statsDto.getNickname());
+                            return
+                                    PlayerMonitoredDto.builder()
+                                            .nickname(statsDto.getNickname())
+                                            .avgChen(playerDtoProjection.getAvgChen())
+                                            .stackOfPlayer(statsDto.getStackOfPlayer())
+                                            .blindsCount(statsDto.getBlindsCount())
+                                            .noActionSeq(statsDto.getNoActionSeq())
+                                            .noActionPerc(statsDto.getNoActionPerc())
+                                            .foldSBSeq(statsDto.getFoldSBSeq())
+                                            .foldSBPerc(statsDto.getFoldSBPerc())
+                                            .foldBBSeq(statsDto.getFoldBBSeq())
+                                            .foldBBPerc(statsDto.getFoldBBPerc())
+                                            .actionBTNSeq(statsDto.getActionBTNSeq())
+                                            .actionBTNPerc(statsDto.getActionBTNPerc())
+                                            .showdowns(playerDtoProjection.getShowdowns())
+                                            .totalHands(playerDtoProjection.getTotalHands())
+                                            .showdownPerc(playerDtoProjection.getShowdownStat())
+                                            .cards(playerDtoProjection.getCards())
+                                            .build();
+                        })
+                        .collect(Collectors.toList());
+    }
+
+    private Map<String, PlayerDtoProjection> toMap(List<PlayerDtoProjection> playerDtoProjectionList) {
+        return
+                playerDtoProjectionList
+                        .stream()
+                        .collect(Collectors.toMap(PlayerDtoProjection::getNickname, Function.identity()));
+    }
+
+    public HandDtoProjection getHand(@NonNull Long handId) {
+        return handConsolidationRepository.getHand(handId);
     }
 }
